--- a/templates/management/add_book.html
+++ b/templates/management/add_book.html
@@ -31,21 +31,21 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="id_category" class="col-md-3 control-label">类型：</label>
+                        <label for="id_category" class="col-md-3 control-label">类型</label>
                         <div class="col-md-9">
                             <input type="text" class="form-control" required name="category" id="id_category">
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="id_price" class="col-md-3 control-label">价格：</label>
+                        <label for="id_price" class="col-md-3 control-label">价格</label>
                         <div class="col-md-9">
                             <input type="text" class="form-control" required name="price" id="id_price">
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="id_pubdate" class="col-md-3 control-label">出版日期：</label>
+                        <label for="id_pubdate" class="col-md-3 control-label">出版日期</label>
                         <div class="col-md-9">
                             <input type="date" class="form-control" required name="publish_date" id="id_pubdate">
                         </div>
