--- a/templates/management/index_1.html
+++ b/templates/management/index_1.html
@@ -1,6 +1,6 @@
 {% extends "management/base.html" %}
 {% load staticfiles %}
-{% block title %}设备管理{% endblock %}
+{% block title %}图书管理{% endblock %}
 
 {% block content %}
 
