--- a/templates/management/set_password.html
+++ b/templates/management/set_password.html
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="id_new" class="col-md-3 control-label">新密码：</label>
+                        <label for="id_new" class="col-md-3 control-label">新&nbsp;&nbsp;密&nbsp;码：</label>
                         <div class="col-md-9">
                             <input type="password" class="form-control" required name="new_password" id="id_new">
                         </div>
