--- a/templates/management/base.html
+++ b/templates/management/base.html
@@ -36,7 +36,7 @@
                 <!--    <li id="add_book"><a href="{% url 'add_book' %}">添加图书</a></li>
                     <li id="add_img"><a href="{% url 'add_img' %}">添加图片</a></li>  -->
                 <li class="dropdown">
-                  <a href="view_book_list" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">计算机管理
+                  <a href="view_computer_list" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">计算机管理
                     <span class="caret"></span>
                   </a>
                   <ul class="dropdown-menu">
@@ -51,7 +51,7 @@
                   </ul>
                 </li>
                 <li class="dropdown">
-                  <a href="view_book_list" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">服务器管理
+                  <a href="view_server_list" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">服务器管理
                     <span class="caret"></span>
                   </a>
                   <ul class="dropdown-menu">
@@ -66,7 +66,7 @@
                   </ul>
                 </li>
                 <li class="dropdown">
-                  <a href="view_book_list" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">备件管理
+                  <a href="view_sparepart_list" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">备件管理
                     <span class="caret"></span>
                   </a>
                   <ul class="dropdown-menu">
@@ -81,7 +81,7 @@
                   </ul>
                 </li>
                 <li class="dropdown">
-                  <a href="view_book_list" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">机房管理
+                  <a href="view_idc_list" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">机房管理
                     <span class="caret"></span>
                   </a>
                   <ul class="dropdown-menu">
