--- a/templates/management/base.html
+++ b/templates/management/base.html
@@ -87,11 +87,11 @@
                   <ul class="dropdown-menu">
                     {% if user.myuser.permission > 1 %}
                     <li>
-                        <a href="/add_idc/">新增机房</a>
+                        <a href="/add_idcinfo/">新增机房</a>
                     </li>
                     {% endif %}
                     <li>
-                        <a href="/view_idc_list/">查询</a>
+                        <a href="/view_idcinfo_list/">查询</a>
                     </li>
                   </ul>
                 </li>
@@ -104,12 +104,9 @@
                     <li>
                         <a href="/add_user/">新增用户</a>
                     </li>
-                    <li>
-                        <a href="/view_auser_list/">查询</a>
-                    </li>
                     {% endif %}
                     <li>
-                        <a href="/view_cuser_list/">查询</a>
+                        <a href="/view_user_list/">查询</a>
                     </li>
                   </ul>
                 </li>
